PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>고객사</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>