PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/AE_In_Charge__c.field-meta.xml
<CustomField>
    <fullName>AE_In_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>담당 AE</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>