PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/AmountType__c.field-meta.xml
<CustomField>
    <fullName>AmountType__c</fullName>
    <label>비용구분</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>용역</fullName>
            </value>
            <value>
                <fullName>라이선스</fullName>
            </value>
            <value>
                <fullName>용역+라이선스</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>