PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/BypassGuidance__c.field-meta.xml
<CustomField>
    <fullName>BypassGuidance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidance 바이패스</label>
    <type>Checkbox</type>
</CustomField>