PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>딜 종료 예정일</label>
    <type>Date</type>
</CustomField>