PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Created_Date_fm__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_fm__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>