PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/CurrentStageAging__c.field-meta.xml
<CustomField>
    <fullName>CurrentStageAging__c</fullName>
    <formula>Today() - CurrentStageStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>경과일수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>