PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/CurrentStageStartDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentStageStartDate__c</fullName>
    <description>현재 Stage로 변경된 날짜</description>
    <label>Stage 시작일</label>
    <type>Date</type>
</CustomField>