PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DemoDate__c.field-meta.xml
<CustomField>
    <fullName>DemoDate__c</fullName>
    <inlineHelpText>03. Demo &amp; Value Proposal - 최초 데모 일자</inlineHelpText>
    <label>데모 일자</label>
    <type>Date</type>
</CustomField>