PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>본부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>사업1부</fullName>
            </value>
            <value>
                <fullName>사업2부</fullName>
            </value>
            <value>
                <fullName>사업3부</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>