PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptioneEuipmentPlan__c.field-meta.xml
<CustomField>
    <fullName>DescriptioneEuipmentPlan__c</fullName>
    <label>8. 서버 및 DB신규 구매 또는 기존 장비 사용</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>신규 구매</fullName>
            </value>
            <value>
                <fullName>부분적 구매</fullName>
            </value>
            <value>
                <fullName>기존 장비 사용</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>