PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionExpectedEffect__c.field-meta.xml
<CustomField>
    <fullName>DescriptionExpectedEffect__c</fullName>
    <label>3. 기대 효과</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>