PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionExpectedUser__c.field-meta.xml
<CustomField>
    <fullName>DescriptionExpectedUser__c</fullName>
    <label>6. 사용 예상 User 수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>