PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionIsLegacy__c.field-meta.xml
<CustomField>
    <fullName>DescriptionIsLegacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7. 기존 사용 시스템 유무</label>
    <type>Checkbox</type>
</CustomField>