PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionNowLegacy__c.field-meta.xml
<CustomField>
    <fullName>DescriptionNowLegacy__c</fullName>
    <inlineHelpText>기존 사용 시스템이 있을 경우만 입력하세요.</inlineHelpText>
    <label>7-1. 현 시스템 구분</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DescriptionIsLegacy__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>자체개발</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>