PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionPackageAmount__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPackageAmount__c</fullName>
    <inlineHelpText>기존 사용 시스템이 있을 경우만 입력하세요.</inlineHelpText>
    <label>7-4. 구축비용</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>