PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionPackageName__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPackageName__c</fullName>
    <inlineHelpText>기존 사용 시스템이 있을 경우만 입력하세요.</inlineHelpText>
    <label>7-2. Package일 경우 패키지명</label>
    <length>100</length>
    <type>Text</type>
</CustomField>