PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionPackageYear__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPackageYear__c</fullName>
    <inlineHelpText>기존 사용 시스템이 있을 경우만 입력하세요.</inlineHelpText>
    <label>7-3. 도입년도</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>