PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionPlan__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPlan__c</fullName>
    <inlineHelpText>02. Identified &amp; Customer Interviewed - 추정 사업 예산
03. Demo &amp; Value Proposal - 확인된 사업 예산</inlineHelpText>
    <label>사업 예산</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>