PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionPurpose__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPurpose__c</fullName>
    <label>사업 내용</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>