PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionPushMethod__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPushMethod__c</fullName>
    <label>5. 추진 방안 및 경쟁사</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>