PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/DescriptionPushPart__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPushPart__c</fullName>
    <inlineHelpText>02. Identified &amp; Customer Interviewed</inlineHelpText>
    <label>의사결정 라인</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>