PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Engagement_Description__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Description__c</fullName>
    <inlineHelpText>미 입력시 최초 작성한 영업기회 이름이 자동으로 업데이트 됩니다.</inlineHelpText>
    <label>정식 영업기회 명</label>
    <type>TextArea</type>
</CustomField>