PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Estimated_Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Month__c</fullName>
    <inlineHelpText>02. Identified &amp; Customer Interviewed - 예상일자 입력
06. Closed - 수주 확정 일자 입력</inlineHelpText>
    <label>종료일자</label>
    <type>Date</type>
</CustomField>