PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Estimated_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Quarter__c</fullName>
    <formula>if( TEXT( Estimated_Close_Month__c ) != &quot;&quot;, 
right( TEXT( YEAR(Estimated_Close_Month__c)) ,len ( TEXT( YEAR(Estimated_Close_Month__c)) )-2 )&amp; &quot;.&quot; &amp; 
CASE ( MONTH ( Estimated_Close_Month__c),
1,&quot;Q1&quot;,
2,&quot;Q1&quot;,
3,&quot;Q1&quot;,
4,&quot;Q2&quot;,
5,&quot;Q2&quot;,
6,&quot;Q2&quot;,
7,&quot;Q3&quot;,
8,&quot;Q3&quot;,
9,&quot;Q3&quot;,
10,&quot;Q4&quot;,
11,&quot;Q4&quot;,
12,&quot;Q4&quot;,
&quot;미정&quot;), 
&quot;미정&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>종료 분기</label>
    <type>Text</type>
</CustomField>