PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/EstimatedKickOffDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedKickOffDate__c</fullName>
    <label>착수예정시기</label>
    <type>Date</type>
</CustomField>