PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <formula>Amount__c * Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>예상 매출액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>