PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>ExpectedRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>보고서 매출액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>