PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/isClosedWon__c.field-meta.xml
<CustomField>
    <fullName>isClosedWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Closed Evaluate True if Opportunity.Stage__c = &apos;07. Closed Won&apos;</description>
    <inlineHelpText>Checkbox True if Stage__c has &apos;07. Closed Won&apos;</inlineHelpText>
    <label>수주여부</label>
    <type>Checkbox</type>
</CustomField>