PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>리드 소스</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>웹</fullName>
            </value>
            <value>
                <fullName>유선문의</fullName>
            </value>
            <value>
                <fullName>파트너 추천</fullName>
            </value>
            <value>
                <fullName>기타 등등</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>