PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Nextstep__c.field-meta.xml
<CustomField>
    <fullName>Nextstep__c</fullName>
    <label>다음 단계</label>
    <length>255</length>
    <type>Text</type>
</CustomField>