PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Opportunity_Name_Fm__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Fm__c</fullName>
    <formula>&apos;[&apos;&amp;  AccountId__r.Name &amp;&apos;]&apos; &amp; &apos; - &apos; &amp; Engagement_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>영업기회</label>
    <type>Text</type>
</CustomField>