PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Opportunity_Name_FM_Hyp__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_FM_Hyp__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id , Opportunity_Name_Fm__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>영업기회</label>
    <type>Text</type>
</CustomField>