PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/PreviousOwner__c.field-meta.xml
<CustomField>
    <fullName>PreviousOwner__c</fullName>
    <label>이전 소유자</label>
    <length>10</length>
    <type>Text</type>
</CustomField>