PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>성공 확률 (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>