PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/ProposalDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalDate__c</fullName>
    <inlineHelpText>03. Demo &amp; Value Proposal - 예상 제안서 제출일자
04. Presentation Proposal &amp; Budget Confirmed - 제안서 제출일자</inlineHelpText>
    <label>제안서 제출일자</label>
    <type>Date</type>
</CustomField>