PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/ProposalPM__c.field-meta.xml
<CustomField>
    <fullName>ProposalPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>제안PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_ProposalPM</relationshipName>
    <type>Lookup</type>
</CustomField>