PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/PTDate__c.field-meta.xml
<CustomField>
    <fullName>PTDate__c</fullName>
    <label>PT 일자</label>
    <type>Date</type>
</CustomField>