PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/QuoteDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteDate__c</fullName>
    <inlineHelpText>견적 작성 시 자동 업데이트</inlineHelpText>
    <label>견적일자</label>
    <type>Date</type>
</CustomField>