PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>비고</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>