PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/RFPDate__c.field-meta.xml
<CustomField>
    <fullName>RFPDate__c</fullName>
    <inlineHelpText>03. Demo &amp; Value Proposal - 예상 RFP 일자
04. Presentation Proposal &amp; Budget Confirmed - RFP 일자</inlineHelpText>
    <label>RFP 일자</label>
    <type>Date</type>
</CustomField>