PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Sales_In_Charge__c.field-meta.xml
<CustomField>
    <fullName>Sales_In_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>영업담당자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>