PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>서비스 타입</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Services</valueSetName>
    </valueSet>
</CustomField>