PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Help : Opportunity 최초 발굴사</inlineHelpText>
    <label>리드소스</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <label>고객추천</label>
            </value>
            <value>
                <fullName>직접요청</fullName>
            </value>
            <value>
                <fullName>웹</fullName>
                <label>Web문의</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <label>SFDC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>