PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Stage1Aging__c.field-meta.xml
<CustomField>
    <fullName>Stage1Aging__c</fullName>
    <formula>NULLVALUE(Stage1EndDate__c,TODAY()) - Stage1StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage 1 Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>