PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Stage2Aging__c.field-meta.xml
<CustomField>
    <fullName>Stage2Aging__c</fullName>
    <formula>NULLVALUE(Stage2EndDate__c,TODAY()) - Stage2StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage 2 Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>