PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Stage3Aging__c.field-meta.xml
<CustomField>
    <fullName>Stage3Aging__c</fullName>
    <formula>NULLVALUE(Stage3EndDate__c,TODAY()) - Stage3StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage 3 Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>