PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Stage3EndDate__c.field-meta.xml
<CustomField>
    <fullName>Stage3EndDate__c</fullName>
    <description>Stage 3 종료일자, 변경 시 셋팅, Stage3로 셋팅되었는데 종료일자가 있는경우 Null로 업데이트, 종료일자 이후 다시 셋팅</description>
    <label>Stage 3 종료일</label>
    <type>Date</type>
</CustomField>