PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Stage3StartDate__c.field-meta.xml
<CustomField>
    <fullName>Stage3StartDate__c</fullName>
    <description>Stage 3 시작일자 이후 단계가 최초인 경우 생성일자로 셋팅</description>
    <label>Stage 3 시작일</label>
    <type>Date</type>
</CustomField>