PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01. Lead</fullName>
                <default>true</default>
                <label>01. Lead</label>
            </value>
            <value>
                <fullName>02. Identified &amp; Customer Interviewed</fullName>
            </value>
            <value>
                <fullName>03. Demo &amp; Value Proposal</fullName>
            </value>
            <value>
                <fullName>04. Presentation Proposal &amp; Budget Confirmed</fullName>
            </value>
            <value>
                <fullName>05. Negotiation</fullName>
            </value>
            <value>
                <fullName>06. Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>