PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/StageDetail__c.field-meta.xml
<CustomField>
    <fullName>StageDetail__c</fullName>
    <label>영업단계</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>06-1. Close Won</fullName>
            </value>
            <value>
                <fullName>06-2. Close Lost</fullName>
            </value>
            <value>
                <fullName>06-3. Drop</fullName>
            </value>
            <value>
                <fullName>06-4. Holding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>