PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Status_fm__c.field-meta.xml
<CustomField>
    <fullName>Status_fm__c</fullName>
    <description>11.26 Stage 변경
CASE (  Stage__c ,
&quot;01. Identified&quot;,&quot;진행 중&quot;,
&quot;02. Customer Interviewed&quot;,&quot;진행 중&quot;,
&quot;03. Proposal (Demo)&quot;,&quot;진행 중&quot;,
&quot;04. Budget Confirmed&quot;,&quot;진행 중&quot;,
&quot;05. Quote/Presentation Proposal&quot;,&quot;진행 중&quot;,
&quot;06. Result Announced&quot;,&quot;진행 중&quot;,
&quot;07. Closed Won&quot;,&quot;수주&quot;,
&quot;08. Closed Lost&quot;,&quot;낙주&quot;,
&quot;09. Drop&quot;,&quot;낙주&quot;,
&quot;&quot;)

2.21 StageDetail로 변경
CASE( StageDetail__c ,
&quot;01. Lead&quot;,&quot;진행 중&quot;,
&quot;02. Identified &amp; Customer Interviewed&quot;,&quot;진행 중&quot;,
&quot;03. Demo &amp; Value Proposal&quot;,&quot;진행 중&quot;,
&quot;04. Presentation Proposal &amp; Budget Confirmed&quot;,&quot;진행 중&quot;,
&quot;05. Negotiation&quot;,&quot;진행 중&quot;,
&quot;06-1. Close Won&quot;,&quot;수주&quot;,
&quot;06-2. Close Lost&quot;,&quot;낙주&quot;,
&quot;06-3. Drop&quot;,&quot;낙주&quot;,
&quot;06-4. Holding&quot;,&quot;대기&quot;,
&quot;&quot;)</description>
    <formula>CASE( StageDetail__c ,
&quot;01. Lead&quot;,&quot;진행 중&quot;,
&quot;02. Identified &amp; Customer Interviewed&quot;,&quot;진행 중&quot;,
&quot;03. Demo &amp; Value Proposal&quot;,&quot;진행 중&quot;,
&quot;04. Presentation Proposal &amp; Budget Confirmed&quot;,&quot;진행 중&quot;,
&quot;05. Negotiation&quot;,&quot;진행 중&quot;,
&quot;06-1. Close Won&quot;,&quot;수주&quot;,
&quot;06-2. Close Lost&quot;,&quot;낙주&quot;,
&quot;06-3. Drop&quot;,&quot;낙주&quot;,
&quot;06-4. Holding&quot;,&quot;대기&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>상태</label>
    <type>Text</type>
</CustomField>