PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <label>영업기회 유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>전략/프로세스</fullName>
            </value>
            <value>
                <fullName>Salesforce 구축</fullName>
            </value>
            <value>
                <fullName>시스템 관리</fullName>
            </value>
            <value>
                <fullName>교육</fullName>
            </value>
            <value>
                <fullName>라이센스 납품</fullName>
            </value>
            <value>
                <fullName>솔루션</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>