PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <label>영업기회 제품군</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>클라우드 전환 컨설팅</fullName>
            </value>
            <value>
                <fullName>ISP 컨설팅</fullName>
            </value>
            <value>
                <fullName>소셜미디어 분석 리포팅</fullName>
            </value>
            <value>
                <fullName>변화관리</fullName>
            </value>
            <value>
                <fullName>빅데이터 컨설팅</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Force.com</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>복합 (Sales+Service+Force.com 등)</fullName>
            </value>
            <value>
                <fullName>클라우드 관리</fullName>
            </value>
            <value>
                <fullName>IFRS 관리</fullName>
            </value>
            <value>
                <fullName>그 외</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin 교육</fullName>
            </value>
            <value>
                <fullName>Salesforce Development 교육</fullName>
            </value>
            <value>
                <fullName>Radian6 사용자 교육</fullName>
            </value>
            <value>
                <fullName>인사/재무</fullName>
            </value>
            <value>
                <fullName>부품추적성</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>