PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>신규</fullName>
                <default>true</default>
                <label>신규</label>
            </value>
            <value>
                <fullName>기존</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>