PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/TypeDemo__c.field-meta.xml
<CustomField>
    <fullName>TypeDemo__c</fullName>
    <label>데모 구분</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Demo</fullName>
            </value>
            <value>
                <fullName>Developed Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>