PA_Education/TestMenifest/force-app/main/default/objects/Opportunity__c/fields/Wrapup__c.field-meta.xml
<CustomField>
    <fullName>Wrapup__c</fullName>
    <inlineHelpText>낙주 또는 대기에 관련한 F/U 내용등을 기재</inlineHelpText>
    <label>Wrapup(경쟁상황 등)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>